--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test:rules:1.2.0'
 
-    // Mobile Vision API
-    implementation 'com.google.android.gms:play-services-vision:18.0.0'
+    //ZXing
+    implementation 'me.dm7.barcodescanner:zxing:1.9'
 }
